* support for 7.0 new Security rules actions : drop, reset-client, reset-server, reset-both
* moved preRules and postRules into one single store (see getPreRules and getPostRules)
* util rule-edit : service-edit and address-edit will auto-detect PANOS vs Panorama, no need to use argument 'type' anymore
* util service-edit : and address-edit new action: replaceByMembersAndDelete
* util upload-config : now supports inject xml parts direct in candidate config (see 'toXpath' option)
* util upload-config : now supports api://x.x.x.x/running-config candidate-config to choose between running and candidate or already saved file
* enhanced support of interfaces : you can extract more infos from them like IP addresses attached to them (see doc for all options available)
* virtual-wire and aggregate-group ethernet interface support


---------

1.2.6
* introduction of new 'utils' upload-config.php script that allows you send a config to a device or save a config from a device or bridge a config from a device to another.
* introduction of Exception support for programs that don't want to quit when an error occurs. use PH::enableExceptionSupport() any time for that
* IOMethods now support optional filename : out=api://192.168.50.10/stage2.xml
* new filter for rule-edit utility: rule is.disabled
* elementToPanXPath() helper to print xpath the way PANOS uses it

1.2.4
* introduction of address-edit.php and service-edit.php on same basis than rules-edit.php for objects manipulations
* API_delete() implemented for Address, AddressGroup, Service, ServiceGroup
* RQuery now supports math operators, opening the way for new filters ( >,<,=,!,>= ....)
* bug fixes for AddressGroup members management on v6

version 1.2.3
* serious bug fixes , upgrade is recommended
* TagRuleContainer->merge() implemented
* fix for ServiceGroup with PANOS6 when reading from XML
* fixes for DOM XML use vs DeviceGroup creation

version 1.2.2
* switch API calls from GET to POST for larger requests