@@ -6,6 +6,7 @@ CHANGELOG
 * support for 7.0 new Security rules actions : drop, reset-client, reset-server, reset-both
 * moved preRules and postRules into one single store (see getPreRules and getPostRules)
 * util rule-edit : service-edit and address-edit will auto-detect PANOS vs Panorama, no need to use argument 'type' anymore
+* util rule-edit : new filters :  src/dst 'match.full match.partial match.full.or.partial'
 * util service-edit : and address-edit new action: replaceByMembersAndDelete
 * util upload-config : now supports inject xml parts direct in candidate config (see 'toXpath' option)
 * util upload-config : now supports api://x.x.x.x/running-config candidate-config to choose between running and candidate or already saved file
